KTTL-1615: Fixed spacing of no-thumbnail Articles. (#966)

--- a/src/theme/css/frontend/single/_content-area.scss
+++ b/src/theme/css/frontend/single/_content-area.scss
@@ -31,6 +31,10 @@
       @apply text-current;
     }
   }
+
+  .post-single.no-thumbnail & {
+    @apply md:pt-px50 lg:pt-px45 lg2:pt-0;
+  }
 }
 
 .post-content-grid {
