--- a/src/theme/css/frontend/single/_header.scss
+++ b/src/theme/css/frontend/single/_header.scss
@@ -6,6 +6,10 @@
 
   & + .post-content-wrap {
 	padding-top: #{-1 * $img-btm-margin};
+
+    .post-single.no-thumbnail & {
+      @apply md:pt-px50 lg:pt-px45 lg2:pt-0;
+    }
   }
 }
 
